# vlog

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Prd.md  README.md  README.zh-CN.md  test-length.js  test-search-css.html  test-search.html
config/: default.toml
deploy/: vlog.env.example  vlog.service
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  M4_MICROBLOG.md
migrations/: 0001_initial.sql  0002_admin.sql  0003_microblog.sql
src/: lib.rs  templates.rs
src/config/: mod.rs
src/domain/: asset.rs  category.rs  follow.rs  like.rs  mod.rs  post.rs  session.rs  site_settings.rs  status.rs  tag.rs  user.rs
src/handlers/: about.rs  feed.rs  mod.rs  not_found.rs  post.rs  search.rs
src/middleware/: mod.rs
src/repositories/: asset_repo.rs  category_repo.rs  db.rs  follow_repo.rs  like_repo.rs  mod.rs  post_repo.rs  session_repo.rs  settings_repo.rs  status_asset_repo.rs  status_repo.rs  tag_repo.rs  user_repo.rs
src/services/: admin_guard.rs  admin_post_service.rs  auth_guard.rs  auth_service.rs  mention_service.rs  mod.rs  post_service.rs  rate_limit.rs  status_service.rs  upload_service.rs
src/utils/: cookie.rs  datetime.rs  error.rs  extract.rs  markdown.rs  mod.rs  password.rs  slug.rs  (+2 more)
templates/: _composer.html  _right_rail.html  _status_card.html  about.html  archive.html  base.html  category.html  followers.html  following.html  hashtag.html  home.html  index.html  me_edit.html  microblog_base.html  post_detail.html  profile.html  rss.xml  search.html  sitemap.xml  status_detail.html  tag.html  timeline.html
(+39 files in other folders)
